Fixed navbar on mobile

--- a/styles/style-2.css
+++ b/styles/style-2.css
@@ -143,8 +143,15 @@ header {
 }
 
 @media (max-width: 800px) {
+    .navbar ul li {
+        margin: 0 5px;
+    }
+}
+
+@media (max-width: 800px) {
     .navbar ul {
         margin-right: 5px;
+        display: flex;
     }
 }
 
@@ -152,6 +159,12 @@ header {
     color: black;
     text-decoration: none;
     font-size: 18px;
+}
+
+@media (max-width: 800px) {
+    .navbar ul li a {
+        font-size: 15px;
+    }
 }
 
 .navbar ul li a:hover {
